# AE_YOLO

./: .gitignore  CMakeLists.txt  README.md  build.bat
.github/workflows/: build.yml
docs/: DEVELOPMENT.md
resources/: AE_YOLOPiPL.r  Info.plist
scripts/: AE_YOLO_Panel.jsx
src/: AE_YOLO.cpp  AE_YOLO.def  AE_YOLO.h  FileDialog.cpp  FileDialog.h  FileDialog_mac.mm  FrameAnalyzer.cpp  FrameAnalyzer.h  Letterbox.h  SavGolSmooth.h  YoloEngine.cpp  YoloEngine.h  YoloPostprocess.cpp  YoloPostprocess.h
test/: test_inference.py
